--- a/Ausarbeitung/Ausarbeitung.tex
+++ b/Ausarbeitung/Ausarbeitung.tex
@@ -1425,7 +1425,7 @@ Tag der Einreichung: \datum
             $$|\nabla J(s)\cdot d^T| < 0.00001$$
             ausreichen.
             Es besteht weiterhin die Möglichkeit, dass $s$ die zulässige Menge $\Omega$ verlässt, oder man über einen optimalen Parameter springt.
-            Diese Fälle wurden auch in der Funktion mit abgedeckt.
+            Diese Fälle werden auch in der obigen Funktion behandelt.
 
             Das Anwenden dieses Algorithmus zur Bestimmung des nächsten Punktes bringt folgende Ergebnisse:
             \begin{table}[!ht]
