Titel Literatur und Datum geändert

--- a/Ausarbeitung/Ausarbeitung.tex
+++ b/Ausarbeitung/Ausarbeitung.tex
@@ -26,7 +26,7 @@
 \newcommand{\betreuer}{Prof. Dr. Oliver Sander}
 \newcommand{\institut}{Institut für Numerische Mathematik}
 \newcommand{\thema}{Gewichtete Eigenwert-Zählung auf einem Intervall}
-\newcommand{\datum}{tt.\ mm.\ jjjj} %Format tt.\ mm.\ jjjj
+\newcommand{\datum}{19.\ 09.\ 2024} %Format tt.\ mm.\ jjjj
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -73,7 +73,10 @@
 \floatname{algorithm}{Algorithmus}
 \renewcommand{\algorithmicrequire}{\textbf{Eingabe:}}
 \renewcommand{\algorithmicensure}{\textbf{Ausgabe:}}
-
+\DefineBibliographyStrings{german}{
+    bibliography = {Literaturverzeichnis},
+    references = {Literaturverzeichnis}
+}
 % Symbolverzeichnis
 \renewcommand{\symheadingname}{Symbolverzeichnis}
 \opensymdef
