--- a/Ausarbeitung/Ausarbeitung.tex
+++ b/Ausarbeitung/Ausarbeitung.tex
@@ -45,7 +45,6 @@
 \newcommand{\diag}{\text{diag}}
 \newcommand{\rang}{\text{rang}}
 \newcommand{\tr}{\text{tr}}
-\newcommand{\AlamB}{A-\lambda\,B}
 \newcommand{\Cnn}{\C^{n\times n}}
 \newcommand{\inv}{^{-1}}
 \newcommand{\1}{\mathds{1}}
@@ -81,7 +80,12 @@
 \renewcommand{\symheadingname}{Symbolverzeichnis}
 \opensymdef
       % \newsym[]{}{}
+      \newsym[Design-Parameter]{s}{s}
       \newsym[Einheitsmatrix]{In}{I_n}
+      \newsym[Matrix-Pencil, $\lambda\in C$]{AlamB}{A-\lambda\,B}
+      \newsym[Eigenwerte des Matrix-Pencils $A-\lambda B$]{lamAB}{\lambda(A,B)}
+      \newsym[Eigenwerte der Matrix $A$]{lamA}{\lambda(A)}
+      \newsym[Spur der Matrix $A$]{trA}{\tr(A)}
       \newsym[Massenmatrix]{M}{M}
       \newsym[Steifigkeitsmatrix]{K}{K}
       \newsym[Federkraft]{FL}{\overrightarrow{F_L}}
@@ -91,9 +95,12 @@
       \newsym[vorgegebenes Intervall]{wAwB}{[\omega_a,\omega_b]}
       \newsym[Eigenwert des Matrix-Pencils, definiert durch $\lambda:=\omega^2$]{lam}{\lambda}
       \newsym[Intervall, definiert durch $\lbrack\lambda_a,\lambda_b\rbrack := \lbrack\omega_a,\omega_b\rbrack$]{lamAlamB}{[\lambda_a,\lambda_b]}
+      \newsym[Funtion, die Eigenwerte auf $\lbrack\lambda_a,\lambda_b\rbrack$ gewichtet zählt]{J}{J(s)}
+      \newsym[Durch Quadraturformel approximierte Funktion $J(s)$]{JStern}{J^*(s)}
 \closesymdef
-% , soll zum Schluss frei von Eigenkreisfrequenzen sein
+% man könnte noch J^*, ..., lambda(A,B), lambda(A), i einbauen
 
+\allowbreak
 \begin{document}
 \selectlanguage{german}
 
@@ -169,15 +176,18 @@ Tag der Einreichung: \datum
 \label{sec: EW Problem_Futamura}
 
       Zu Beginn der Ausarbeitung werden einige Resultate über Matrizen und lineare Algebra behandelt.
-      Diese werden in Kapitel \ref{sec: EW Zählung} verwendet, um die Zählung der Eigenwerte zu einer differenzierbaren Funktion umzuformen.
+      Diese werden in Kapitel \ref{sec: EW Zählung} verwendet, um die Zählung der Eigenwerte in eine Funktion \J umzuformen, die direkt von \s abhängt.
       
       \section{Der Matrix-Pencil}
-            Betrachte zunächst das Konzept des \zitat{Matrix-Pencils} \cite[S. 32]{matrixPencilDeutsch}, welches in dieser Ausarbeitung eine entscheidende Rolle spielt.
-            \begin{definition}(pencil, \cite[S. 375]{matrixGolub})
+            Betrachte zunächst das Konzept des \zitat{Matrix-Pencils} \cite[S. 32]{matrixPencilDeutsch}, welches in dieser Ausarbeitung eine entscheidende Rolle spielt, den viele Aussagen aus Kapitel \ref{sec: EW Problem_Futamura} beziehen sich auf einen Matrix-Pencil.
+      
+            \begin{definition}(pencil, vgl. \cite[S. 375]{matrixGolub})
                   \label{def: pencil}
                   Seien $A$ und $B$ Matrizen in $\C^{n\times n}$, dann wird die Menge aller Matrizen der Form
                   $\AlamB, \lambda \in \C$ Matrix-Pencil genannt.
             \end{definition}
+
+            Diese Menge vom matrizen wird auch mit $(A, B)$ bezeichnet (siehe \cite[S. 37w]{regularMatrixPencil}).
 
             Laut \cite[S. 375]{matrixGolub} seien die Eigenwerte von $\AlamB$ diejenigen $\lambda \in\C$, für die gelte:
             \begin{equation}
@@ -186,26 +196,29 @@ Tag der Einreichung: \datum
             \end{equation}
             
             Hier wird $x\in\C^n$ Eigenvektor genannt.
-            Man beachte, dass für $B=\In$ Gleichung (\ref{eqn: allg EW Problem}) die folgende Form annimmt:
+            Man beachte, dass für $B=\In$ die Gleichung (\ref{eqn: allg EW Problem}) zu
             $$(A-\lambda\In)x=0 \Leftrightarrow Ax = \lambda x,$$
-            also genau die Form des speziellen Eigenwertproblems.
-% gibt es ein Eigenwertproblem und wenn ja, gibt es eine Definition? oder ist es einfach eine Gleichung?
-            Daher wird die Suche nach den $\lambda\in\C$, die (\ref{eqn: allg EW Problem}) erfüllen, auch \zitat{allgemeines Eigenwertproblem}\cite[S. 380]{maschinendynamikDresig} genannt, da sie eine allgemeine Form des speziellen Eigenwertproblems darstellen.
+            wird, also genau die Form des \zitat{speziellen Eigenwertproblems}(vgl. \cite[S. 381]{maschinendynamikDresig}).
+% Definiere lamA
+            Daher wird die Suche nach den $\lambda\in\C$, die (\ref{eqn: allg EW Problem}) erfüllen, auch \zitat{allgemeines Eigenwertproblem}\cite[S. 380]{maschinendynamikDresig} genannt, da sie eine größere Klasse von Gleichungen abdeckt.
             Falls man $\AlamB$ durch die Matrix $C$ ersetzt, so entsteht aus (\ref{eqn: allg EW Problem}) das lineare homogene Gleichungssystem
             $$Cx=0,\quad x\ne 0$$
-
+% linear, homogen Quelle oder Allgemeinwissen
             Nach einem Resultat aus der linearen Algebra gilt:
-% welches Resultat?, ich habe es bis jetzt nur in Skript LA20 gefunden
+% welches Resultat?
             $$\det(C)\ne 0 \Leftrightarrow Cx=0 \text{ hat als einzige Lösung }x=0$$
-            Durch Negation folgt:
+            Durch Kontraposition folgt:
             $$\det(C)=0 \Leftrightarrow \exists x\ne 0: Cx=0$$
 
-            Somit sucht man die Eigenwerte des Matrix-Pencils, in dem man die Nullstellen des Polynoms $\det(\AlamB)$ berechnet\footnote{Man könnte das Polynom $\det(\AlamB)$ als eine Art charakteristisches Polynom des Matrix-Pencils $\AlamB$ betrachten, ähnlich dem charakteristischen Polynom $f(A)$ einer Matrix $A$}.
+            % Somit sucht man die Eigenwerte des Matrix-Pencils, in dem man die Nullstellen des Polynoms $\det(\AlamB)$ berechnet\footnote{Man könnte das Polynom $\det(\AlamB)$ als eine Art charakteristisches Polynom des Matrix-Pencils $\AlamB$ betrachten, ähnlich dem charakteristischen Polynom $f(A)$ einer Matrix $A$}.
             
-            Daher wird in \cite[S. 375]{matrixGolub} die Menge der Eigenwerte des Matrix-Pencils $\AlamB$ wie folgt definiert:
+            Somit kann durch Finden einer Nullstelle $\lambda'$ des Polynoms $\det(A-\lambda B)$ sichergestellt werden, dass ein zugehöriger Vektor $x'\ne 0$ existiert, sodass $\lam'$ und $x'$ Gleichung (\ref{eqn: allg EW Problem}) lösen.
+            Man findet die Eigenwerte des Matrix-Pencils also durch die Berechnung der Nullstellen dieses Polynoms.
+
+            Daher wird in \cite[S. 375]{matrixGolub} die Menge der Eigenwerte des Matrix-Pencils $\AlamB$ auch wie folgt definiert:
             \begin{equation}
                   \label{def: EW Pencil}
-                  \lambda(A,B):=\{z\in\C:\ \det(A - zB) = 0\}
+                  \lamAB:=\{z\in\C:\ \det(A - zB) = 0\}
             \end{equation}
 
             Laut \cite[S. 375]{matrixGolub} gelte zudem:
@@ -213,194 +226,41 @@ Tag der Einreichung: \datum
                   \label{eqn: n EW äquiv rang B n}
                   \AlamB \text{ hat }n\text{ Eigenwerte}\Leftrightarrow \rang(B)=n
             \end{equation}
-            Dieses Resultat wird für Kapitel \ref{sec: EW Zählung} relevant werden und kann mithilfe von Theorem \ref{thrm: allg Schur Zerlegung} gezeigt werden.
+            Dieses Resultat ist für Kapitel \ref{sec: EW Zählung} relevant und kann mithilfe von Theorem \ref{thrm: allg Schur Zerlegung} leicht gezeigt werden.
 
             Man benötigt für die Identität von Futamura aus Kapitel \ref{sec: Futamura} zudem eine weitere Definition:
-            \begin{definition}(Regulärer Matrix-Pencil, vgl. \cite[S. 784]{regularMatrixPencil})\\
+            \begin{definition}(Regulärer Matrix-Pencil, vgl. \cite[S. 376]{regularMatrixPencil})\\
                   \label{def: regulärer Pencil}
-                  Ein Matrix-Pencil $A+\lambda B$ wird regulär genannt, wenn $A,B\in \Cnn$ und
-                  $$\det(A+\lambda B)\ne 0$$ 
+                  Ein Matrix-Pencil $A-\lambda B$ wird regulär genannt, wenn $A,B\in \Cnn$ und
+                  $$\exists \lam\in\C:\det(A-\lambda B)\ne 0$$ 
             \end{definition}
 
-            Beachte, dass hier zwar der Matrix-Pencil mit $+$ statt $-$ angegeben wurde, aber diese Definitionen sind gleichwertig, da man $\tilde \lambda := -\lambda$ in den Matrix-Pencil einsetzen kann.
             \begin{remark}
                   \label{bem: B reg impl pencil reg}
                   Diese Definition bedeutet insbesondere, dass der Matrix-Pencil regulär ist, falls B regulär ist, denn es gilt:
                   \begin{align*}
-                        B\text{ regulär} \Leftrightarrow & \rang(B)=n\Leftrightarrow |\lambda(A,B)| = n<\infty\\
+                        B\text{ regulär} \Leftrightarrow & \rang(B)=n\Leftrightarrow |\lambda(A,B)| = n<|\C|\\
                         \Rightarrow & \exists z\in\C\setminus\lambda(A,B): \det(A+zB) \ne 0 \Leftrightarrow \AlamB \text{ regulär}
                   \end{align*}
                   Wobei (\ref{eqn: n EW äquiv rang B n}) und die Überabzählbarkeit von $\C$ verwendet wurde.
+                  Diese Aussage kann auch in \cite[S. 376]{regularMatrixPencil} gefunden werden.
             \end{remark}
             
 % man kann auch noch Korollar 2.3.11 (LinAlg Werner, S. 50) ansprechen
 
       \section{Die Schur-Zerlegung}
-            In diesem Kapitel werden weitere wichtige Konzepte vorgestellt, die für Kapitel \ref{sec: Futamura} benötigt werden.
-
+            In diesem Abschnitt wird eine weitere wichtige Aussage vorgestellt, die für Kapitel \ref{sec: Futamura} benötigt wird.
+            Dazu benötigt man allerdings noch die Definition der unitären Matrizen:
+% Name vergeben
             \begin{definition}(\cite[S. 73]{matrixGolub})
                   Sei $Q \in\C^{n\times n}$, dann wird $Q$ unitär genannt, wenn
                   $$Q^HQ = QQ^H=\In$$
             \end{definition}
 
-            Hier ist $Q^H$ die Adjungierte von $Q$, also die Matrix, die durch komplexe Konjugation und Transponierung von $Q$ entsteht, siehe auch \cite[S. 14]{matrixGolub}.
+            Hier ist $Q^H$ die Adjungierte von $Q$, also die Matrix, die durch komplexe Konjugation und Transponierung von $Q$ entsteht.
+            Man bemerke, dass die komplexe Konfugation auf jeden Eintrag der Matrix $Q$ einzeln angewendet wird, siehe \cite[S. 14]{matrixGolub}.
 
-%             \begin{theorem}(vgl. Theorem 7.1.3 (Schur Decomposition)\cite[S. 313]{matrixGolub})\\
-%                   \label{thrm: Schur Zerlegung}
-%                   Wenn $A \in \C^{n\times n}$, dann existiert eine unitäre Matrix $Q\in\C^{n\times n}$, sodass
-%                   \begin{equation}
-%                         \label{eqn: Schur_Resultat}
-%                         Q^H\,AQ = T = D+N
-%                   \end{equation}
-%                   mit $D=\diag(\lambda_1,\dots,\lambda_n)$ und $N\in\C^{n\times n}$ strikter oberer Dreiecksmatrix.
-%                   Ferner kann $Q$ so gewählt werden, dass die Eigenwerte $\lambda_i$ in beliebiger Reihenfolge auf der Diagonalen auftauchen.
-%             \end{theorem}
-
-%             Um dieses Theorem zu beweisen, benötigt man ein Hilfslemma aus \cite[S.312]{matrixGolub}.
-%             Das folgende Resultat wird einfachheitshalber in dem speziellen Fall vorgestellt, wie es für den Beweis von Theorem \ref{thrm: Schur Zerlegung} benötigt wird.
-
-%             \begin{lemma}(vgl. Lemma 7.1.2\cite[S. 312]{matrixGolub})
-%                   \label{lemma: Hilfe Schur}\\
-%                   Falls ein $A\in\C^{n\times n}, \lambda\in \C$ Eigenwert von $A$ und $X\in \C^{n}$
-%                   \begin{equation}
-%                         \label{eqn: Hilfslemma Schur_Bed}
-%                         AX = X\lambda,\qquad \rang(X)=1
-%                   \end{equation}
-                  
-%                   erfüllen, dann existiert ein $Q\in \C^{n\times n}$ unitär, sodass
-%                   $$Q^H\,AQ = T =  \begin{bmatrix}
-%                         \lambda & T_{12} \\
-%                         0 & T_{22} \\
-%                         \end{bmatrix}$$
-%                   mit $T_{22}\in \C^{(n-1)\times(n-1)}$
-%             \end{lemma}
-
-%             Beweis:
-%             Erhalte mit \cite[S. 233]{matrixGolub} eine komplexe QR-Zerlegung für $X$. Es gilt dann
-%             $$X = Q\,R$$
-%             mit $Q\in \C^{n \times n}$ unitär und $R = [r,0,\dots,0]^\top\in \C^n$.
-%             Durch Einsetzen in (\ref{eqn: Hilfslemma Schur_Bed}) und Multiplikation mit $Q^H$ folgt
-%             \begin{equation}
-%                   \label{eqn: Hilfslemma_Schur_Gl}
-%                   \underbrace{Q^H\,AQ}_{=:T}\ R = Q^H\,Q\ R\ \lambda
-%             \end{equation}
-% % man könnte hier R statt dem Vektor nutzen, dann wäre es kompakter
-%             hier ist noch $T:=\begin{matrix}
-%                   \begin{bmatrix}
-%                         T_{11} & T_{12}\\
-%                         T_{21} & T_{22}\\
-%                   \end{bmatrix} & \begin{matrix}
-%                   \text{\small 1} \\\text{\small{n-1}}
-%                   \end{matrix} \\
-%                   \begin{matrix}
-%                   \text{\small 1} &  \text{  \small{n-1}}\\
-%                   \end{matrix} &  \\
-%                   \end{matrix}$\\
-
-%             Durch Ausmultiplizieren von (\ref{eqn: Hilfslemma_Schur_Gl}) folgen die Gleichungen\\
-
-%             $$\begin{aligned}
-%                   T_{11}\,r =& r\,\lambda\\
-%                   T_{21}\,r =& 0
-%             \end{aligned}$$
-
-%             und mit $\rang(X)=1 \Rightarrow X\ne 0 \Rightarrow r\ne 0$ folgt $T_{11} = \lambda,\ T_{21} = 0$.\qed
-
-%             Nach \cite[S. 312]{matrixGolub} gelte ferner $\lambda(A) = \lambda(T) = \{\lambda\}\cup\lambda(T_{22})$.\\
-            
-
-%             Nun können wir Theorem \ref{thrm: Schur Zerlegung} beweisen.
-
-%             Beweis Theorem \ref{thrm: Schur Zerlegung} (vgl. \cite[S. 313]{matrixGolub}):
-
-%             Offenbar gilt für $n=1$:\\
-%             $A$ ist ein Skalar, wodurch (\ref{eqn: Schur_Resultat}) für alle $Q$ unitär erfüllt ist.\\
-%             Sei nun $n>1$ und (\ref{eqn: Schur_Resultat}) gelte für alle $k<n$, dann gilt für einen beliebigen Eigenwert $\lambda$ von $A$ und zugehörigen Eigenvektor $X$:
-%             $$AX = \lambda X = X \lambda,\quad X\in \C^n, X\ne 0$$
-%             Nach Lemma \ref{lemma: Hilfe Schur} existiert $U\in \C^{n\times n}$ unitär, sodass
-%             $$U^H\, AU = \begin{bmatrix}
-%                   \lambda & T_{12} \\
-%                   0 & T_{22} \\
-%                   \end{bmatrix}$$
-%             Da aber $T_{22}\in\C^{(n-1)\times(n-1)}$, so gilt nach der Induktionsvoraussetzung:
-%             $$\widetilde U^H\,T_{22}\widetilde U = R,$$
-%             wobei $R\in\C^{(n-1)\times(n-1)}$  rechte obere Dreiecksmatrix, $\widetilde U \in\C^{(n-1)\times(n-1)}$ unitär.
-
-%             Sei nun $Q:=U\cdot\begin{bmatrix}
-%                   1&0\\
-%                   0&\widetilde U
-%             \end{bmatrix}$
-
-%             dann gilt mit\footnote{die folgende Gleichung stammt aus \cite{conjugateTranspose}, Beweis ebenfalls dort zu finden}
-% % Fussnote vielleicht scheisse platziert
-%             \begin{equation}
-%                   \label{eqn: Produkt Adjungierter}
-%                   \klammer{AB}^H = B^HA^H,\quad A,B\in \C^{n\times n}
-%             \end{equation}
-%             für (\ref{eqn: Schur_Resultat}):
-%             $$\begin{aligned}
-%                   Q^H\,AQ =& \begin{bmatrix}
-%                         1&0\\
-%                         0&\widetilde U
-%                   \end{bmatrix}^H\,U^H\,AU \begin{bmatrix}
-%                         1&0\\
-%                         0&\widetilde U
-%                   \end{bmatrix} = \begin{bmatrix}
-%                         1&0\\
-%                         0&\widetilde U^H
-%                   \end{bmatrix}
-%                   \begin{bmatrix}
-%                         \lambda & T_{12} \\
-%                         0 & T_{22} \\
-%                   \end{bmatrix}
-%                   \begin{bmatrix}
-%                         1&0\\
-%                         0&\widetilde U
-%                   \end{bmatrix}\\
-%                   =& \begin{bmatrix}
-%                         \lambda&T_{12}\\
-%                         0&\widetilde U^H\, T_{22}
-%                   \end{bmatrix}
-%                   \begin{bmatrix}
-%                         1&0\\
-%                         0&\widetilde U
-%                   \end{bmatrix}
-%                   = \begin{bmatrix}
-%                         \lambda&T_{12}\,\widetilde U\\
-%                         0&\widetilde U^H\, T_{22}\, \widetilde U
-%                   \end{bmatrix}\\
-%                   =& \begin{bmatrix}
-%                         \lambda&T_{12}\,\widetilde U\\
-%                         0&R
-%                   \end{bmatrix}
-%             \end{aligned}$$
-%             Wobei verwendet wurde, dass nach Definition die komplex Konjugation skalar angewendet wird\footnote{siehe \cite[S. 14]{matrixGolub}}, also es gilt:
-           
-%             \begin{equation}
-%             \label{eqn: Adjungierte reinziehen}
-%                   \begin{bmatrix}
-%                         1&0\\
-%                         0&\widetilde U
-%                   \end{bmatrix}^H = \overline{\begin{bmatrix}
-%                         1&0\\
-%                         0&\widetilde U^T
-%                   \end{bmatrix}} = \begin{bmatrix}
-%                         \overline{1}&0\\
-%                         0&\overline{\widetilde U^T}
-%                   \end{bmatrix} = \begin{bmatrix}
-%                         1&0\\
-%                         0&\widetilde U^H
-%                   \end{bmatrix}
-%             \end{equation}
-
-%             Damit ist gezeigt, dass $Q^H\,AQ$ eine rechte obere Dreiecksmatrix ist.
-
-%             $D = \diag(\lambda_1,\dots,\lambda_n)$ folgt mit Korollar 4.2.3 aus \cite[S. 80]{LinAlgWerner}.
-%             Die Beliebigkeit der Anordnung der Eigenwerte auf der Diagonalen erhält man durch rekursives Anwenden von Theorem \ref{thrm: Schur Zerlegung} auf die Matrix $T_{22}$.
-%             Es fehlt noch zu zeigen, dass $Q$ unitär ist, was aber mit (\ref{eqn: Produkt Adjungierter}) und (\ref{eqn: Adjungierte reinziehen}) einfach gezeigt werden kann. \qed\\
-
-            Mithilfe dieser Definition kann nun die allgemeine Schur-Zerlegung vorgestellt werden.
-            Diese wird für den Beweis der Identität von Futamura in Kapitel \ref{sec: Futamura} benötigt.
+            Mithilfe dieser Definition kann nun die allgemeine Schur-Zerlegung vorgestellt werden, welche für den Beweis der Identität von Futamura in Kapitel \ref{sec: Futamura} benötigt wird.
 %hier kann noch viel mehr erzählt werden: die Eigenschaft der Eigenwerte ist von entscheidender Relevanz
             \begin{theorem}(Generalized Schur Decompositon, \cite[S. 377]{matrixGolub})
                   \label{thrm: allg Schur Zerlegung}
@@ -421,58 +281,9 @@ Tag der Einreichung: \datum
       \section{Die Identität von Futamura}
       \label{sec: Futamura}
 
-            Nach den Vorbereitungen, die in vorherigen Abschnitten gemacht wurden, kann nun die Identität von Futamura beschrieben und gezeigt werden.
+            Nach den Vorbereitungen der vorherigen Abschnitte kann nun die Identität von Futamura beschrieben und gezeigt werden.
 
-            Das folgende Theorem wird für das Finden einer Zielfunktion von entscheidender Relevanz sein,
-            da durch diese Aussage in Kapitel \ref{sec: EW Zählung} ein Zusammenhang zwischen der Anzahl der Eigenwerte auf einem Intervall und einem Kurvenintegral über Matrizen gezeigt werden kann.
-
-            \begin{theorem}(vgl. \cite[S. 127]{grundlageFutamura})
-                  \label{thrm: IdentitätFutamura}\\
-                  Seien $A, B\in\Cnn, z\in \C$, sodass $(zB-A)$ ein regulärer Matrix-Pencil ist, dann gibt es unitäre Matrizen $Q$ und $U \in\Cnn$, sodass
-                  $$A = QTU^H,\quad B=QSU^H$$
-                  und
-                  \begin{equation}
-                        \label{eqn: Resultat_Futamura}
-                        \tr((zB-A)\inv B) = \sum_{j\in N}\frac{1}{z-\lambda_j},
-                  \end{equation}
-                  gilt, wobei $N:=\{i\in\{1,\dots,n\}: s_{ii}\ne 0\}$ und $\lambda_j$ die Eigenwerte des Matrix-Pencils sind.
-                  $S$ und $T$ sind hier obere Dreiecksmatrizen.
-            \end{theorem}
-% warum zB-A? für Eigenwerte macht es keinen Unterschied
-            Beweis:
-            Nach Theorem \ref{thrm: allg Schur Zerlegung} gibt es unitäre Matrizen $Q$ und $U\in\Cnn$, sodass nach entsprechender Multiplikation gilt:
-            $$A=QTU^H,\quad B=QSU^H$$
-            mit $T,S\in\Cnn$ obere Dreiecksmatrizen.
-            
-            Hierbei sind $S$ und $T$ obere Dreiecksmatrizen, und es gilt:
-            $$\lambda(B)=\lambda(S) = \{s_{ii}:i=1,\dots,n\},$$
-            aber diese Eigenwerte sind noch ungeordnet und man kann nicht wie in \cite{grundlageFutamura}:
-            \begin{align*}
-                  s_{ii} = \begin{cases}
-                        \ne 0 & : i\le n'\\
-                        0 & : i>n'
-                  \end{cases}
-            \end{align*}
-            annehmen für $n':=|\{i\in\{1,\dots,n\}: s_{ii}\ne 0\}|$.
-
-            Mithilfe der Definition
-            $$N:=\{i=1,\dots,n: s_{ii}\ne 0\}$$
-            kann dies aber umgangen werden.
-
-            Man kann folgern:
-            \begin{align*}
-                  (zB-A)\inv B =& (z\,QSU^H-QTU^H)\inv QSU^H = (Q(zS-T)U^H)\inv QSU^H \\
-                  =& U(zS-T)\inv Q^H\,QSU^H = U(zS-T)\inv S\,U\inv
-            \end{align*}
-
-            Man sieht, dass $(zB-A)\inv B$ und  $(zS-T)\inv S$ ähnlich zueinander sind.\\
-            Da die Spur invariant unter Ähnlichkeitstransformation ist\footnote{vgl. 3. Exercise unter Example 1.3.5 in \cite{matrixSpur}}, gilt
-            \begin{equation}
-                  \label{eqn: Haltepunkt Bew Futamura}
-                  \tr((zB-A)\inv B) = \tr((zS-T)\inv S) = \sum_{i=1}^{n}((zS-T)\inv S)_{ii}
-            \end{equation}
-
-            Für die folgenden Beweisschritte benötigt man einige Aussagen über obere Dreiecksmatrizen, hierbei ist mit $X_{ij}$ der Eintag von X in Zeile $i$ und Spalte $j$ gemeint.
+            Für den Beweis von Theorem \ref{thrm: IdentitätFutamura} benötigt man noch einige Aussagen über obere Dreiecksmatrizen, $X_{ij}$ bezeichne in diesem Abschnitt den Eintag der Matrix $X$ in Zeile $i$ und Spalte $j$.
 
             \begin{lemma}
                   \label{Hilfslemma_Futamura: Inv Dreieck}
@@ -503,21 +314,115 @@ Tag der Einreichung: \datum
             $$X \text{ invertierbar}\Rightarrow \det X = \prod_{k=1}^{n}X_{kk}\ne 0\Rightarrow X_{kk}\ne 0\quad \forall k=1,\dots,n$$
             verwendet.\qed\\
 
-            Nun kann man den Beweis für Theorem \ref{thrm: IdentitätFutamura} vervollständigen:
+
+
+            Das folgende Theorem wird in Kapitel \ref{sec: EW Zählung} von entscheidender Relevanz sein,
+            da durch diese Aussage in dieser Arbeit die Verteilung der Eigenwerte von $(A, B)$ auf den Design-Parameter \s zurückgeführt werden kann.
+% besser erklären, geht natürlich nicht für alle Pencil
+            \begin{theorem}(vgl. \cite[S. 127]{grundlageFutamura})
+                  \label{thrm: IdentitätFutamura}\\
+                  Seien $A, B\in\Cnn, z\in \C$, sodass $(zB-A)$ ein regulärer Matrix-Pencil ist, dann gibt es unitäre Matrizen $Q$ und $U \in\Cnn$, sodass
+                  $$A = QTU^H,\quad B=QSU^H$$
+                  und
+                  \begin{equation}
+                        \label{eqn: Resultat_Futamura}
+                        \tr((zB-A)\inv B) = \sum_{j\in N}\frac{1}{z-\lambda_j},
+                  \end{equation}
+                  gilt, wobei $N:=\{i\in\{1,\dots,n\}: s_{ii}\ne 0\}$ und $\lambda_j$ die Eigenwerte des Matrix-Pencils sind.
+                  $S$ und $T$ sind hier obere Dreiecksmatrizen.
+            \end{theorem}
+
+            \begin{remark}
+                  \label{Bem: matrixPencilRegulärWennNegativRegulär}
+                  Es gilt folgende Äquivalenz:
+                  $$(\lambda B-A)\text{ regulär} \Leftrightarrow (A-\lam B)\text{ regulär}$$ 
+            \end{remark}
+            Beweis:\\
+            Offenbar gilt:
+            $$(\lambda B-A) = -(A-\lam B) = (-\In) (A-\lam B)$$
+            Nach Satz 4.24 und Korollar 4.23 aus \cite[S. 80]{LinAlgWerner} gilt:
+            \begin{align*}
+                  \det(\lam B-A) =& \det((-\In) (A-\lam B)) = \det(-\In)\det(A-\lam B)\\
+                   =& \underbrace{(-1)^n}_{\ne 0} \det(A-\lam B)
+            \end{align*}
+            Es folgt für ein $\lam'\in\C$:
+            $$\det(\lam' B-A)\ne 0 \Leftrightarrow \det(A-\lam'B)\ne 0$$
+            Nach Anwendung der Definition \ref{def: regulärer Pencil} folgt Behauptung.\qed\\
+
+            Beweis Theorem \ref{thrm: IdentitätFutamura}:
+            Nach Theorem \ref{thrm: allg Schur Zerlegung} existieren unitäre Matrizen $Q$ und $U\in\Cnn$, sodass nach entsprechender Multiplikation gilt:
+            $$A=QTU^H,\quad B=QSU^H$$
+            mit $T,S\in\Cnn$ obere Dreiecksmatrizen.
+            
+            % Hierbei sind $S$ und $T$ obere Dreiecksmatrizen, und es gilt:
+            % $$\lambda(B)=\lambda(S) = \{s_{ii}:i=1,\dots,n\},$$
+            % aber diese Eigenwerte sind noch ungeordnet und man kann nicht wie in \cite{grundlageFutamura}:
+            % \begin{align*}
+            %       s_{ii} = \begin{cases}
+            %             \ne 0 & : i\le n'\\
+            %             0 & : i>n'
+            %       \end{cases}
+            % \end{align*}
+            % annehmen für $n':=|\{i\in\{1,\dots,n\}: s_{ii}\ne 0\}|$.
+
+            Es folgt:
+            \begin{align*}
+                  (zB-A)\inv B =& (z\,QSU^H-QTU^H)\inv QSU^H = (Q(zS-T)U^H)\inv QSU^H \\
+                  =& U(zS-T)\inv Q^H\,QSU^H = U(zS-T)\inv S\,U\inv
+            \end{align*}
+
+            Man sieht, dass $(zB-A)\inv B$ und  $(zS-T)\inv S$ ähnlich zueinander sind.\\
+            Da die Spur invariant unter Ähnlichkeitstransformation ist\footnote{vgl. 3. Exercise unter Example 1.3.5 in \cite{matrixSpur}}, gilt
+% Fussnote irgendwie schlecht
+            \begin{equation}
+                  \label{eqn: Haltepunkt Bew Futamura}
+                  \tr((zB-A)\inv B) = \tr((zS-T)\inv S) = \sum_{i=1}^{n}((zS-T)\inv S)_{ii}
+            \end{equation}
+
+            Es sei $$N:=\{i=1,\dots,n: s_{ii}\ne 0\}.$$
             Mit den Lemmata \ref{Hilfslemma_Futamura: Inv Dreieck}, \ref{Hilfslemma_Futamura: Prod Dreieck} und \ref{Hilfslemma_Futamura: Diag Inv Dreieck} folgt für (\ref{eqn: Haltepunkt Bew Futamura}):
             \begin{align*}
                   \tr((zB-A)\inv B) =& \sum_{i=1}^{n}((zS-T)\inv)_{ii}\ S_{ii} = \sum_{i=1}^{n}((zS-T)_{ii})\inv\ S_{ii}\\
-                  =& \sum_{i=1}^{n}\frac{s_{ii}}{z\,s_{ii}-t_{ii}} = \sum_{i\in N}\frac{s_{ii}}{s_{ii}(z-t_{ii}\, s_{ii}\inv)}\\
-                  =& \sum_{i\in N} \frac{1}{z-\lambda_i}
+                  =& \sum_{i=1}^{n}\frac{s_{ii}}{z\,s_{ii}-t_{ii}}
             \end{align*}
 
-            mit
-            $$\lambda_i = \frac{t_{ii}}{s_{ii}},\quad i\in N.$$
+            Für $i\notin N$ gilt nach Definition von $N$:
+            $$\frac{s_{ii}}{z\,s_{ii}-t_{ii}} = \frac 0 {-t_{ii}} = 0,$$
+            Beweis:\\
+            Nach Voraussetzung ist der Matrix-Pencil regulär, daher folgt:
 
-            Nach Theorem \ref{thrm: allg Schur Zerlegung} und der Definition von $N$ gilt:
+            \begin{align*}
+                  \text{Matrix-Pencil regulär} \Rightarrow& \exists \lambda'\in \C: \det(A-\lam B)\ne 0 \Rightarrow \lambda'\notin \lamAB\\
+                  \Rightarrow & \C \neq \lamAB \Rightarrow \nexists i\in\{1,\dots, n\}: s_{ii}=t_{ii}=0\\
+                  \Rightarrow & t_{ii}\neq 0\ \forall i\notin N
+            \end{align*}
+            wobei in der ersten Implikation Definition \ref{def: regulärer Pencil} und in der vierten Implikation Theorem \ref{thrm: allg Schur Zerlegung} verwendet wurde.\qed \\
+
+            Mit
+            $$\lambda_i = \frac{t_{ii}}{s_{ii}},\quad i\in N$$
+            folgt
+
+            \begin{align*}
+                  \tr((zB-A)\inv B) =& \sum_{i=1}^{n}\frac{s_{ii}}{z\,s_{ii}-t_{ii}} = \sum_{i\in N}\frac{s_{ii}}{s_{ii}(z-t_{ii}\, s_{ii}\inv)}\\
+                  =& \sum_{i\in N} \frac{1}{z-\lambda_i}
+            \end{align*}\qed
+
+            \begin{remark}
+                  Hier wurde nicht die originale Identität von Futamura gezeigt, da nicht bewiesen wurde, dass
+                  \begin{align*}
+                        s_{ii} = \begin{cases}
+                              \ne 0 & : i\le |N|\\
+                              0 & : i>|N|
+                        \end{cases}
+                  \end{align*}
+                  Für diese Ausarbeitung spielt es aber keine Rolle, da man immer einen Matrix-Pencil $(A, B)$ mit regulärer Matrix $B$ verwenden wird.
+                  Nach Bemerkung \ref{bem: B reg impl pencil reg} ist daher immer $N=\{1,\dots, n\}$
+            \end{remark}
+
+            Nach Theorem \ref{thrm: allg Schur Zerlegung} und der Definition von $N$ gilt für einen regulären Matrix-Pencil:
 
             $$\lambda(A, B) = \left\{\frac{t_{ii}}{s_{ii}} : s_{ii}\ne 0\right\} = \{\lambda_i: i\in N\}$$
-            somit sind die Eigenwerte des Matrix-Pencils genau die Polstellen der Funktion $\tr((zB-A)\inv B)$.
+            somit sind die Eigenwerte eines regulären Matrix-Pencils genau die Polstellen der Funktion $\tr((zB-A)\inv B)$.
 
             In Kapitel \ref{sec: EW Zählung} wird daher das Residuentheorem auf ein Kurvenintegral\\
             über $\tr((zB-A)\inv B)$ angewendet, um die Anzahl der Eigenwerte zu bestimmen.
