--- a/Ausarbeitung/Literatur.bib
+++ b/Ausarbeitung/Literatur.bib
@@ -181,13 +181,14 @@
 }
 
 @article{regularMatrixPencil,
-    title={Matrix pencils: Theory, applications, and numerical methods},
-    author={Ikramov, Kh D},
-    journal={Journal of Soviet Mathematics},
-    volume={64},
-    pages={783--853},
-    year={1993},
-    publisher={Springer}
+    title={Symmetric matrix pencils},
+    author={Parlett, Beresford N},
+    journal={Journal of Computational and Applied Mathematics},
+    volume={38},
+    number={1-3},
+    pages={373--385},
+    year={1991},
+    publisher={Elsevier}
 }
 
 @incollection{LinAlgWerner,
