--- a/Ausarbeitung/Ausarbeitung.tex
+++ b/Ausarbeitung/Ausarbeitung.tex
@@ -1160,29 +1160,37 @@ Tag der Einreichung: \datum
       \section{Grafiken und Erklärung}
             Man gehe nun genauer auf die Verläufe der Eigenwertzählung und die Verläufe der Eigenwerte selbst ein.
             Betrachte zuerst die ersten beiden Durchläufe.
-            Um die folgenden Ausführungen zu unterstützen, wird nur die Verteilung der Eigenwerte bis zum 200. Schritt gezeigt.
+            Um die folgenden Ausführungen zu unterstützen, werden die folgenden zwei Abbildungen auf die Schritte 0 bis 200 begrenzt.
             Nach dem Schritt verändern sich in diesen beiden Durchläufen bis Schritt 10000 weder die Eigenwert-Zählungen noch die Verteilung der Eigenwerte wesentlich.
+
+            Der obere Plot eines Durchlaufs zeigt, wie sich die gewichteten und die ungewichtete Eigenwertzählung veränderten.
+            Der untere Plot zeigt jeweils das vorgegebene Intervall und die Verteilung der Eigenwerte.
+            Oft werden nur Ausschnitte gezeigt, um die Eigenwerte innerhalb diese Intervalls deutlicher zu erkennen.
+            Es ist daher möglich, dass nicht alle Eigenwerte abgebildet werden.
+            Die kompletten Abbildungen kann man aber durch Ausführen des Programmes \textit{erste Implementierung.py} erhalten.
+            
+            Für diese beiden Durchläufe beschränke man sich auf die Verteilung der Eigenwerte.
             \begin{figure}[h!t]
                   \centering
                   \includegraphics[width=0.9\textwidth, keepaspectratio]{./Original/Plot_1_100_0.05.png}
-                  \caption{Plot zu System 1, $m=100$, $\lambda_*=0.05$}
+                  \caption{System 1, $m=100$, $\lambda_*=0.05$}
                   \label{fig: Plot_1_100_0.05}
             \end{figure}
 
             \begin{figure}[h!t]
                   \centering
                   \includegraphics[width=0.9\textwidth, keepaspectratio]{./Original/Plot_1_150_0.05.png}
-                  \caption{Plot zu System 1, $m=150$, $\lambda_*=0.05$}
+                  \caption{System 1, $m=150$, $\lambda_*=0.05$}
                   \label{fig: Plot_1_150_0.05}
             \end{figure}
 
-            Man sehe zuerst, dass sich Eigenwert 2 dem oberen Rand des Intervalls nähert, aber ihn nicht überschreitet.
+            Die gepunkteten Linien stellen immer das Intervall \lamAlamB dar.
+            Man sehe zuerst, dass sich der betrachtete Eigenwert dem oberen Rand des Intervalls ($\lam_b$) nähert, aber ihn nicht überschreitet.
             Daran ändert sich auch nach weiteren 9800 Schritten nichts, wie man in Tabelle \ref{tab: Ergebnisse} erkennen kann.
-            Die Unterschiede zwischen diesen Durchläufen kann man an den Verläufen der Eigenwerte 3-8 erkennen.
-            Da diese Eigenwerte aber nicht im Intervall liegen, unterscheiden sich die Eigenwert-Zählungen dieser Durchläufe nicht sichtbar.
-            Diese Tatsache kann man durch Ausführen des Programmes selber belegen.
+            Diese Durchläufe unterscheiden sich so minimal voneinander, dass die Unterschiede nur durch sehr starke Vergrößerung sichtbar werden.
+            Dies kann man sich ebenfalls durch Ausführung des Programmes klar machen.
 
-            Bei den nächsten beiden Durchläufen betrachte nur die Schritte 0 bis 19. 
+            Bei den nächsten beiden Durchläufen betrachte nur die Schritte 0 bis 17. 
 
             \begin{figure}[h!t]
                   \centering
@@ -1198,30 +1206,30 @@ Tag der Einreichung: \datum
                   \label{fig: Plot_1_150_0.5}
             \end{figure}
 
-            Hier kann man die Unterschiede zwischen den Genauigkeiten der Quadraturformeln erkennen: während in Abb. \ref{fig: Plot_1_100_0.5}
-            nach Schritt 15 nicht alle Eigenwerte aus dem Intervall entfernt wurden,
-            so wurde es in Abb. \ref{fig: Plot_1_150_0.5} vollbracht.
+            Hier kann man die Unterschiede zwischen den Genauigkeiten der Quadraturformeln leicht erkennen: während in Abb. \ref{fig: Plot_1_100_0.5}
+            nach Schritt 15 nicht alle Eigenwerte aus dem Intervall entfernt wurden, so befinden sich in Abb. \ref{fig: Plot_1_150_0.5} nach dem gleichen Schritt alle Eigenwerte außerhalb des Intervalls.
+            Da die Abbruchbedingung des Gradientenverfahrens hier die genaue gewichtete Eigenwertzählung ist, wird das Gradientenverfahren nach diesem Schritt beendet.
 
-            Man sehe aber auch, dass die approximierte gewichtete Eigenwertzählung bei beiden Durchläufen sehr stark von der genauen abweicht.
+            Man sehe aber auch, dass die approximierte gewichtete Eigenwertzählung bei beiden Durchläufen in Schritt 15 sehr stark von der genauen abweicht.
             Dies kann sehr wahrscheinlich auf die verwendete Quadraturformel zurückgeführt werden:
             Bei beiden Quadraturformeln wird L(z,s) an den Stellen $z=\lambda_a$ und $z=\lambda_b$ ausgewertet.
-            Falls aber ein Eigenwert sich nahe des Intervallrandes befindet, so sind diese Stützstellen nahe einer Polstelle.
-            Das kann zu unvorhersagbaren Erscheinungen führen:
-            Während in Abb. \ref{fig: Plot_1_100_0.5} bei Schritt 15 die gewichtete Eigenwertzählung viel zu hoch approximiert wird,
-            so wird die approximierte gewichtete Eigenwertzählung in Abb. \ref{fig: Plot_1_150_0.5} bei Schritt 15 negativ.
+            Falls aber ein Eigenwert sich nahe des Intervallrandes befindet, so befindet sich eine Stütztelle nahe einer Polstelle.
+            Das führt zu unerwünschten Erscheinungen:
+            In Abb. \ref{fig: Plot_1_100_0.5} wird die gewichtete Eigenwertzählung bei Schritt 15 viel zu hoch approximiert,
+            in Abb. \ref{fig: Plot_1_150_0.5} wird sie bei Schritt 15 negativ.
 
-            Bei Durchlauf \ref{fig: Plot_1_100_0.5} wird infolge dessen nun nicht mehr versucht, den zweiten Eigenwert zu vergrößern,
-            damit er das obere Ende des Intervalls überschreitet, sondern er wird verringert, wodurch nun sogar der erste Eigenwert im Intervall liegt.
+            Bei Durchlauf \ref{fig: Plot_1_100_0.5} wird infolge dessen nicht mehr versucht, den zweiten Eigenwert zu vergrößern,
+            damit er das obere Ende des Intervalls überschreitet, sondern der zweite Eigenwert wird so stark verringert, sodass nun sogar der erste Eigenwert im Intervall liegt.
             Obwohl die negative Approximation bei Abb. \ref{fig: Plot_1_150_0.5} einen Wert annimmt, der für die genauen Eigenwertzählung nicht möglich ist, so ändert es nichts an dem Verlauf,
             da in diesem Schritt alle Eigenwert außerhalb des Intervalls liegen und laut Algorithmus \ref{alg: steilster Abstieg}
-            die genaue gewichtete Zählung verwendet wird, um zu entscheiden, ob ein Minimum erreicht wurde.
+            die genaue gewichtete Zählung verwendet wird, um zu entscheiden, ob ein Minimum erreicht wurde. Wie man sehen kann verschwinden die genauen Eigenwertzählung bei Schritt 15.
             Sollte man nur Informationen über die approximierte Zählung besitzen, so wäre das Verfahren, je nach Programmierung,
             nicht beendet worden, sondern fortgeführt worden, obwohl es ein Minimum erreicht hatte.
 
             Dieses Verhalten der approximierten gewichteten Eigenwertzählung wird in Kapitel \ref{sec: Verbesserungen} erneut angesprochen.
 
-            Betrachte nun die letzten zwei Durchläufe:
-            Es wurde sich hier auf die Schritte 50-150 beschränkt, um diese im Detail sehen zu können.
+            Betrachte nun die Durchläufe von System 2.
+            Es wurde sich auf die Schritte 0 bis 150 beschränkt, um diese im Detail sehen zu können.
 
             \begin{figure}[h!t]
                   \centering
@@ -1237,15 +1245,12 @@ Tag der Einreichung: \datum
                   \label{fig: Plot_2_150_0.05}
             \end{figure}
 
-            Hier sieht man, dass das Erreichen eines Minimums in Abb. \ref{fig: Plot_2_100_0.05} keine kontrollierte Veränderung von $s$ war,
-            um einen einzelnen Eigenwert zu vergrößern/ verringern, sondern die Eigenwerte sich fast zufällig veränderten.
-            Bei Abb. \ref{fig: Plot_2_100_0.05} traf der Algorithmus bei Schritt 150 nur zufällig einen Design-Parameter,
-            durch welchen alle Eigenwerte außerhalb des Intervalls lagen.
-            Durch die genauere Quadraturformel, die in Abb. \ref{fig: Plot_2_150_0.05} verwendet wurde, wurde $\nabla J^*(s)$ derart verändert,
-            dass der letzte Design-Parametern aus Abb. \ref{fig: Plot_2_100_0.05} nicht erreicht wurde.
-            Man kann hier die Suche nach einem passenden Parameter $s$ als fast chaotisches System betrachten,
-            da eine Veränderung der genutzen Quadraturformel ausreicht, um den Verlauf der Minimierung komplett zu verändern
-            \footnote{es reicht sogar ein Wechsel des Gerätes, welches das Programm ausführt, um unterschiedliche Ergebnisse hervorzubringen}.
+            Wie man leicht in Abb. \ref{fig: Plot_2_100_0.05} sehen kann, war das Erreichen eines Minimums nicht immer eine kontrollierte Veränderung:
+            An beiden Stellen kam ein Eigenwert sehr nahe an eine der beiden Intervallgrenzen. Wie schon in den vorherigen Abbildungen führt das zu einer ungenauen Approximation der gewichteten Eigenwertzählung.
+            Zufällig waren diese Ungenauigkeit und somit auch die Sprünge in Abb. \ref{fig: Plot_2_100_0.05} derart, dass nach dem zweiten Sprung alle Eigenwerte außerhalb des Intervalls lagen,
+            wohingegen bei Abb. \ref{fig: Plot_2_150_0.05} die genauere Quadraturformel zur Folge hatte, dass nicht alle Eigenwerte nach diesen Sprüngen außerhalb des Intervalls lagen.
+
+            Man könnte die Minimierung als instabiles System ansehen, da hier Veränderungen der Quadraturformel ausreichten, um den Verlauf der Eigenwerte komplett zu verändern\footnote{es reicht sogar ein Wechsel des Gerätes, welches das Programm ausführt, um unterschiedliche Ergebnisse hervorzubringen}.
 
 \chapter{Verbesserungen}
 \label{sec: Verbesserungen}
