Erklärung Eigenwerte Plots unten

--- a/Ausarbeitung/Ausarbeitung.tex
+++ b/Ausarbeitung/Ausarbeitung.tex
@@ -1185,6 +1185,8 @@ Tag der Einreichung: \datum
             \end{figure}
 
             Die gepunkteten Linien stellen immer das Intervall \lamAlamB dar.
+            Ferner werden die Eigenwerte in den Plots \zitat{Entwicklung der Eigenwerte} nicht mithilfe einer Legende beschriftet, da dies keinen Mehrwert bringt.
+            Mit erster Eigenwert werde hier immer der größte Eigenwert bezeichnet, den man sehen kann, mit zweiter der nächstkleinere.
             Man sehe zuerst, dass sich der betrachtete Eigenwert dem oberen Rand des Intervalls ($\lam_b$) nähert, aber ihn nicht überschreitet.
             Daran ändert sich auch nach weiteren 9800 Schritten nichts, wie man in Tabelle \ref{tab: Ergebnisse} erkennen kann.
             Diese Durchläufe unterscheiden sich so minimal voneinander, dass die Unterschiede nur durch sehr starke Vergrößerung sichtbar werden.
